# SDP-KN-Group-4-2023-2024

./: .gitignore  README.md
Week01-ReviewAndComplexity/: README.md
Week01-ReviewAndComplexity/TimeComplexity/: 03-quadric.cpp  04-logarithmic.cpp  06-samples.cpp
Week02-DynamicArrayAndSinglyLinkedList/: README.md
Week02-DynamicArrayAndSinglyLinkedList/lab/: README.md  (+2 more)
Week03-DoublyLinkedListAndLinkedListTasks/: task01.cpp  task01.h  task02.cpp  task02.h  task02Tests.cpp  task03.cpp  task03Tests.cpp  task04.cpp  task04Tests.cpp  task06Tests.cpp  task07.cpp  task07.h
Week04-Stack/: README.md  task01.cpp  task02.cpp  task03.cpp  task04.cpp  task05.cpp  task06.cpp  task07.cpp  task08.cpp
Week05-Queue/: README.md
Week06-BST/: README.md  bst.h  main.cpp
Week07-BST_Tasks/: README.md  bst.h  main.cpp  task10.cpp
Week08-Cmake/: CMakeLists.txt
Week08-Cmake/src/: CMakeLists.txt
Week08-Cmake/src/app/: CMakeLists.txt  main.cpp
Week08-Cmake/src/math/: CMakeLists.txt  fact.cpp
Week08-Cmake/src/math/include/: fact.h
Week08-Cmake/src/person/: CMakeLists.txt  egn.cpp  person.cpp
Week08-Cmake/src/person/include/: egn.h  person.h
Week08-Cmake/test/: CMakeLists.txt
Week08-Cmake/test/math/: CMakeLists.txt  factTests.cpp
Week08-Cmake/test/person/: CMakeLists.txt  personTests.cpp
Week08-Cmake/tests/: CMakeLists.txt  fact_test.cpp
Week09-Trees_Tasks/: README.md  essentials.cpp  task01.cpp  task02.cpp  task03.cpp  task04.cpp
Week10-Graphs/: README.md
Week11-12-HashMap/: README.md  hashMap.cpp
Week13-HashMapTasks/: README.md
Week14-Sorting/: README.md
(+78 files in other folders)
